tests/ui/traits/static-method-generic-inference.stderr
error[E0790]: cannot call associated function on trait without specifying the corresponding `impl` type
  --> $DIR/static-method-generic-inference.rs:24:25
   |
LL |         fn new() -> T;
   |         -------------- `HasNew::new` defined here
...
LL |     let _f: base::Foo = base::HasNew::new();
   |                         ^^^^^^^^^^^^^^^^^^^ cannot call associated function of trait
   |
help: use the fully-qualified path to the only available implementation
   |
LL |     let _f: base::Foo = <Foo as base::HasNew>::new();
   |                         +++++++             +

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0790`.
